fix datepicker z-index problem

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -100,6 +100,7 @@ input.datepicker-input {
 
 .ui-datepicker {
   background: $white;
+  z-index: 1000!important;
 
   .ui-icon {
     overflow: hidden;
